--- a/day03/day3-4/package.json
+++ b/day03/day3-4/package.json
@@ -10,7 +10,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.2"
   }
 }
